k8s/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: music-store-app-dply
  namespace: music-store
spec:
  replicas: 1
  selector:
    matchLabels:
      app: music-store-app
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: music-store-app
    spec:
      containers:
      - name: music-store-app-pod
        image: tosh3/kiii-music-store-app
        ports:
        - containerPort: 8080
