k8s/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: music-store-app-svc
  namespace: music-store
spec:
  selector:
    app: music-store-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
