k8s/db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: music-store-db-svc
  namespace: music-store
spec:
  selector:
    app: music-store-db
  ports:
  - protocol: TCP
    port: 1433
    targetPort: 1433
